Rename and added comments

--- a/cpuid/Makefile
+++ b/cpuid/Makefile
@@ -1,18 +1,18 @@
 CC = clang-18
 
-cpuid: main.o cpuid.o
+cpuid0: main.o cpuid0.o
 	$(CC) -o $@ $^
 
 main.o: main.c
 	$(CC) -nostdlib -c -o $@ $^
 
-cpuid.o: cpuid.S
+cpuid0.o: cpuid0.S
 	$(CC) -nostdlib -c -o $@ $^
 
 clean:
 	rm -f main.o
-	rm -f cpuid.o
-	rm -f cpuid
+	rm -f cpuid0.o
+	rm -f cpuid0
 
-run: cpuid
+run: cpuid0
 	./$<
