--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
     "types.h": "c",
     "unistd.h": "c",
     "conn_manage.h": "c",
-    "util.h": "c"
+    "util.h": "c",
+    "socket.h": "c"
   }
 }
