Bound checks, back-pressure, upscale-ondemand

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,10 @@
     "unistd.h": "c",
     "conn_manage.h": "c",
     "util.h": "c",
-    "socket.h": "c"
+    "socket.h": "c",
+    "array": "c",
+    "string_view": "c",
+    "initializer_list": "c",
+    "utility": "c"
   }
 }
