--- a/event_loop/Makefile
+++ b/event_loop/Makefile
@@ -4,6 +4,9 @@ CFLAGS=-O3 -I$(MUSL_PREFIX)/include -std=c17
 
 all: fdset_demo socket_mux io_echo
 
+test: test.c alloc.c err.c blob.c hash.c ringbuf.c pkt.c
+	clang-18 -O0 -g3 -o $@ $^
+
 alloc.o: alloc.c
 	clang-18 -O3 -flto -c -o $@ $^
 
@@ -58,5 +61,11 @@ clean:
 	rm -f chat_room
 	rm -f chat_room_dbg
 	rm -f alloc.o
+	rm -f err.o
+	rm -f hash.o
+	rm -f pkt.o
+	rm -f blob.o
+	rm -f test.o
+	rm -f test
 
 build: fdset_demo
