Use test folder

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,6 +20,7 @@
     "err.h": "c",
     "alloc.h": "c",
     "stdlib.h": "c",
-    "ringbuf.h": "c"
+    "ringbuf.h": "c",
+    "pkt.h": "c"
   }
 }
